5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1885_1622.log
== TEST (2019-07-09 10:16:25) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i=0
for y in a:
	for x in b:
		i = a[y]+b[x]
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:17:16) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i=0
for y in a:
	for x in b:
		i = a[y]+b[x]
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:21:36) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i= size(a)
u = 0
j=0
k=0
while(u=<i):
	a[u]=b[j]
	k=a[u]-b[j]
	u+=1
			

print(k)

	
-- ERROR:
File "XXXX", line 9
    while(u=<i):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:21:49) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i= size(a)
u = 0
j=0
k=0
while(u<i):
	a[u]=b[j]
	k=a[u]-b[j]
	u+=1
			

print(k)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:22:36) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i= size(a)
u = 0
j=0
k=0
while(u<i):

	k=a[u]-b[j]
	u+=1
			

print(k)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:23:08) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i= size(a)
u = 0
j=0
k=0
while(u<i):

	k=a[u]-b[j]
	u+=1
	print(k)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:24:14) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i= size(a)
u = 0
j=0
k=0
while(u<i):

	k=a[u]-b[j]
	u+=1
print(k)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:25:30) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i= size(a)
u = 0
j=0
k=0
while(u<=i):

	k=a[u]-b[j]
	u+=1
print(k)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:28:11) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i= size(a)
u = 0
j=0
k=0
while(u=<i):

	k= a[u] - b[j]
	u+=1
print(k)

	
-- ERROR:
File "XXXX", line 9
    while(u=<i):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:28:31) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i= size(a)
u = 0
j=0
k=0
while(i>=u):

	k= a[u] - b[j]
	u+=1
print(k)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:29:56) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i= size(a)
u = 0
j=0
k=0
while(i>u):

	k= a[u] - b[j]
	u+=1
print(k)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:30:18) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i= size(a)
u = 0
j=0
k=0
while(i>u):

	k= a[u] - b[j]
	u= u + 1
print(k)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:31:06) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i= size(a)
u = 0
j=0
k=0
while(i>u):

	k= k+ (a[u] - b[j])
	u= u + 1
print(k)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 10:31:39) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i= size(a)
u = 0
j=0
k=0
while(i>u):

	k= k+ (a[u] - b[j])
	u= u + 1
print(k)

	
-- EXECUTION TIME:
1.29422
-- TEST CASE 1:
---- input:
[10,20,15,0]
[0,5,12,0]
---- correct output:
28
---- user output:
45
-- TEST CASE 2:
---- input:
[10,50,15,0]
[0,10,12,4]
---- correct output:
49
---- user output:
75
-- TEST CASE 3:
---- input:
[10,24,2,10]
[5,20,10,4]
---- correct output:
7
---- user output:
26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:31:48) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i= size(a)
u = 0
j=0
k=0
while(i>u):

	k= k+ (a[u] - b[j])
	u= u + 1
print(k)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:33:47) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i= size(a)
u = 0
j=0
k=0
while(i>u):
	soma= k+ (a[u] - b[j])
	u= u + 1
	k=soma
print(soma)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:34:15) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i= size(a)
u = 0
j=0
k=0
while(i>u):
	soma= k+ (a[u] - b[j])
	u= u + 1
	k=soma
print(soma)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:34:53) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i= size(a)
u = 0
j=0
k=0
while(i>u):
	soma= k+ (a[u] - b[j])
	u= u + 1
	j= j+1
	k=soma
print(soma)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 10:35:13) 
-- CODE:
#maximo 75
from numpy import*
a = array(eval(input("ENTRAM NOI BUSAO: ")))
b = array(eval(input("saem do busao na parada: ")))
i= size(a)
u = 0
j=0
k=0
while(i>u):
	soma= k+ (a[u] - b[j])
	u= u + 1
	j= j+1
	k=soma
print(soma)

	
-- EXECUTION TIME:
0.881246
-- TEST CASE 1:
---- input:
[10,20,15,0]
[0,5,12,0]
---- correct output:
28
---- user output:
28
-- TEST CASE 2:
---- input:
[10,50,15,0]
[0,10,12,4]
---- correct output:
49
---- user output:
49
-- TEST CASE 3:
---- input:
[10,24,2,10]
[5,20,10,4]
---- correct output:
7
---- user output:
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
